--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,46 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+body {
+color:#333333;
+font-family: 'Open Sans', sans-serif;
+background: #ECE9E6;
+background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);
+background: linear-gradient(to right, #FFFFFF, #ECE9E6);
+}
+
+h1 {
+  font-size: 40px;
+  font-weight: 100;
+  letter-spacing: 1px;
+  font-family: 'Lato', sans-serif;
+  color:#353d45;
+ /* color:#ffffff;*/
+}
+
+h3 {
+  font-size: 40px;
+  font-weight: 100;
+}
+
+.pHeading {
+  font-size: 20px;
+  font-weight: 100;
+  font-family: 'Lato', sans-serif;
+    letter-spacing: 1px;
+  color:#353d45;
+  /*color:#ffffff;*/
+}
+p {
+   font-family: 'Lato', sans-serif;
+  color:black;
+  font-size: 16px;
+
+  color:#353d45;
+  /*color:#ffffff;*/
+  letter-spacing: 1px;
+}
+.gap{
+  margin-top: 20px;
+}
