--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,196 +19,19 @@
 
 <div class="gap"></div>
 
-<!-- Buttons -->
+<!-- Tabs -->
 <md-tab-group >
+
     <md-tab label="New Deployment">
-      <div class="gap"></div>
-
-      <!-- Description Card -->
-      <div fxLayout="row" fxlayout.xs="column" fxLayoutAlign="center">
-          <md-card>
-              <div fxLayout="column" fxFlex="20%" fxLayoutGap="7%">
-                  <a style="cursor:pointer"><img md-card-image src="https://mockingbot.in/uploads/images/22/227150/raw_1493822097.jpeg"></a>
-              </div>
-              <div fxLayout="column" fxFlex="40%" fxFlexOffset="2%">
-                  <p> doTerra Balance Essential Oils</p>
-                  <p>01:25:39</p>
-              </div>
-              <div fxLayout="column" fxFlex="5%" fxFlexOffset="35%">
-                  <button md-icon-button [mdMenuTriggerFor]="appMenu">
-                      <md-icon>details</md-icon>
-                  </button>
-              </div>
-          </md-card>
-      </div>
-      <!-- Description Card Ends -->
-
-      <div fxlayot="row" fxLayoutAlign="center">
-          <p class="pHeading"> Choose from below option to Schedule a new Deployment</p>
-      </div>
-      <div class="gap"></div>
-
-      <!-- Cards Start -->
-      <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="7%">
-
-          <!-- Card-1 -->
-          <div fxFlex="13%" fxLayout="column">
-              <md-card class="example-card">
-                  <div fxFlexOffset="80%">
-                      <button md-icon-button [mdMenuTriggerFor]="appMenu">
-                          <md-icon>settings</md-icon>
-                      </button>
-                      <md-menu #appMenu="mdMenu">
-                          <button md-menu-item> Option - 1 </button>
-                          <button md-menu-item> Option - 2 </button>
-                      </md-menu>
-                  </div>
-                  <img md-card-image src="http://freevector.co/wp-content/uploads/2013/08/37631-code-interface-symbol-of-signs-200x200.png">
-                  <p align="center">Link and embed code for direct sharing</p>
-              </md-card>
-          </div>
-
-          <!-- Card-2 -->
-          <div fxFlex="13%" fxLayout="column">
-              <md-card class="example-card">
-                  <div fxFlexOffset="80%">
-                      <button md-mini-fab [mdMenuTriggerFor]="appMenu">
-                          <md-icon>settings</md-icon>
-                      </button>
-                      <md-menu #appMenu="mdMenu">
-                          <button md-menu-item> Option - 1 </button>
-                          <button md-menu-item> Option - 2 </button>
-                      </md-menu>
-                  </div>
-                  <img md-card-image src="http://www.thomas-danielsen.dk/assets/components/design//images/svg-icons/facebook-square.svg">
-                  <p align="center" style="width:100%">Vito's Facebook account</p>
-              </md-card>
-          </div>
-
-          <!-- Card-3 -->
-          <div fxFlex="13%" fxLayout="column">
-              <md-card class="example-card">
-                  <div fxFlexOffset="80%">
-                      <button md-mini-fab [mdMenuTriggerFor]="appMenu">
-                          <md-icon>settings</md-icon>
-                      </button>
-                      <md-menu #appMenu="mdMenu">
-                          <button md-menu-item> Option - 1 </button>
-                          <button md-menu-item> Option - 2 </button>
-                      </md-menu>
-                  </div>
-                  <img md-card-image src="https://mockingbot.in/uploads/images/22/227117/raw_1493819961.png">
-                  <p align="center">Prashant Chaudhary's Gmail Account</p>
-              </md-card>
-          </div>
-
-          <!-- Card-4 -->
-          <div fxFlex="13%" fxLayout="column">
-              <md-card class="example-card">
-                  <div fxFlexOffset="80%">
-                      <button md-icon-button [mdMenuTriggerFor]="appMenu">
-                          <md-icon>settings</md-icon>
-                      </button>
-                      <md-menu #appMenu="mdMenu">
-                          <button md-menu-item> Option - 1 </button>
-                          <button md-menu-item> Option - 2 </button>
-                      </md-menu>
-                  </div>
-                  <img md-card-image src="https://mockingbot.in/uploads/images/22/227117/raw_1493819961.png">
-                  <p align="center">John Rizzo's Gmail Account</p>
-              </md-card>
-          </div>
-
-      </div>
-
-      <!-- Cards End -->
-
-      <div class="gap"></div>
-      <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="7%">
-
-          <!-- Card-1 -->
-          <div fxFlex="13%" fxLayout="column">
-              <md-card class="example-card">
-                  <div fxFlexOffset="80%">
-                      <button md-icon-button [mdMenuTriggerFor]="appMenu">
-                          <md-icon>settings</md-icon>
-                      </button>
-                      <md-menu #appMenu="mdMenu">
-                          <button md-menu-item> Option - 1 </button>
-                          <button md-menu-item> Option - 2 </button>
-                      </md-menu>
-                  </div>
-                  <img md-card-image src="https://mockingbot.in/uploads/images/22/227122/raw_1493820142.png">
-                  <p align="center">Jennifer's Mailchimp</p>
-              </md-card>
-          </div>
-
-          <!-- Card-2 -->
-          <div fxFlex="13%" fxLayout="column">
-              <md-card class="example-card">
-                  <div fxFlexOffset="80%">
-                      <button md-mini-fab [mdMenuTriggerFor]="appMenu">
-                          <md-icon>settings</md-icon>
-                      </button>
-                      <md-menu #appMenu="mdMenu">
-                          <button md-menu-item> Option - 1 </button>
-                          <button md-menu-item> Option - 2 </button>
-                      </md-menu>
-                  </div>
-                  <img md-card-image src="https://mockingbot.in/uploads/images/22/227129/raw_1493820378.png">
-                  <p align="center">Vikrant's Outlook</p>
-              </md-card>
-          </div>
-
-          <!-- Card-3 -->
-          <div fxFlex="13%" fxLayout="column">
-              <md-card class="example-card">
-                  <div fxFlexOffset="80%">
-                      <button md-mini-fab [mdMenuTriggerFor]="appMenu">
-                          <md-icon>settings</md-icon>
-                      </button>
-                      <md-menu #appMenu="mdMenu">
-                          <button md-menu-item> Option - 1 </button>
-                          <button md-menu-item> Option - 2 </button>
-                      </md-menu>
-                  </div>
-                  <img md-card-image src="https://mockingbot.in/uploads/images/22/227117/raw_1493819961.png">
-                  <p align="center">Somebody's else Gmail</p>
-              </md-card>
-          </div>
-
-          <!-- Card-4 -->
-          <div fxFlex="13%" fxLayout="column">
-              <md-card class="example-card">
-                  <div fxFlexOffset="80%">
-                      <button md-icon-button [mdMenuTriggerFor]="appMenu">
-                          <md-icon>settings</md-icon>
-                      </button>
-                      <md-menu #appMenu="mdMenu">
-                          <button md-menu-item> Option - 1 </button>
-                          <button md-menu-item> Option - 2 </button>
-                      </md-menu>
-                  </div>
-                  <a style="cursor:pointer" [mdMenuTriggerFor]="addMenu"><img md-card-image src="https://www.iconfinder.com/data/icons/common-4/24/ui-01-512.png"></a>
-                  <md-menu #addMenu="mdMenu">
-                      <button md-menu-item> Add - 1 </button>
-                      <button md-menu-item> Add - 2 </button>
-                  </md-menu>
-                  <p align="center">Add New Deployment Channel</p>
-              </md-card>
-          </div>
-
-      </div>
-
-      <div class="gap"></div>
+     <app-view-card></app-view-card>
     </md-tab>
 
     <md-tab label="Scheduled Deployment">
-Content 2 goes here
+     Content 2 goes here
     </md-tab>
-</md-tab-group>
 
-<!-- Button Ends -->
+</md-tab-group>
+<!-- Tabs Ends -->
 
 
 
